--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>hi iam lucky</p>
     <div class="box1">
-        <div class="box2"></div>
+        <div class="box2">dropdown</div>
     </div>
 </body>
 </html>
